--- a/wiki/UserStoryV1.wiki
+++ b/wiki/UserStoryV1.wiki
@@ -1,11 +1,11 @@
 #V1: I would like to pull contact information from the contact database so that I can contact a volunteer.
 
-= Introduction =
+= Priority =
 
-Priority: MH
-
+Must Have
 
 = Developer =
+
 Charlotte Tan
 
 = Status =
